Ajout de texte au CV

--- a/index.html
+++ b/index.html
@@ -30,24 +30,30 @@
                 <div class="row">
                     <div class="col-md-4">
                          <section class="texte">
-                            
-                            <h4 class="text-right">Parcours <span class="glyphicon glyphicon-leaf"></span></h4> 
-                            <p> 1995 - Bac S Option Biologie </p>
-                            <p> 2000 - Communication visuelle à l'Académie Charpentier </p>
+                            <h4 class="text">Parcours <span class="glyphicon glyphicon-leaf"></span></h4> 
+                            <p> Après un bac S et un début de Deug de Biologie je bifurque vers la communication
+                            visuelle. Je suis diplômée en 2000 à l'Académie Charpentier à Paris.</p>
+                            <p> J'ai déjà réalisé quelques sites (heureusement plus en ligne) lors de mon premier stage
+                            - avec des frames - puis au cours de ma carrière de free-lance - avec Dreamweaver ou en Flash -
+                            mais j'ai toujours été bloquée par mes lacunes dans ce domaine en constante évolution.</p>
                         </section>
                     </div>
                     <div class="col-md-4">
                          <section class="texte">
                             <h4>Ambitions <span class="glyphicon glyphicon-leaf"></span></h4> 
-                            <p>Devenir maitre du monde</p>
-                            <p>Logo, Identité visuelle, Packaging, Direction artistique</p>
+                            <p>Mieux comprendre et maîtriser un environnement que j'utilise chaque jour : 
+                            <br/>internet.</p>
+                            <p>Réorienter mon activité vers le web.
+                            <br/>Pouvoir réaliser ou conseiller mes clients sur la réalisation de leur site internet.</p>
                         </section>
                     </div>
                     <div class="col-md-4">
                         <section class="texte">
                             <h4>Expériences professionnelles <span class="glyphicon glyphicon-leaf"></span></h4> 
-                            <p>Graphiste freelance depuis 2003 pour des clients dans l'edition, la mode, la beauté</p>
-                            <p>Logo, Identité visuelle, Packaging, Direction artistique</p>
+                             <p>Graphiste freelance depuis 2003 pour des clients dans l'edition, la mode, la beauté</p>
+                            <p>Logo, Identité visuelle, Mise en page,
+                            <br/>Packaging, Direction artistique</p>
+                            <h4>Logiciels <span class="glyphicon glyphicon-leaf"></span></h4>
                             <p>Adobe Indesign, Illustrator, Photoshop</p>
                         </section>
                     </div>
