Corrections alignements et marges CSS

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
          <header>
              <div class="container">
                  <div class="row">
-                     <div class="col-md-3">
-                         <img src="images_cv/mvt_thumb.jpg" alt="autoportrait flou"/>
+                     <div class="col-md-2">
+                         <img src="images_cv/mvt_120px.jpg" alt="autoportrait flou"/>
                     </div>
-                     <div class="col-md-9">
-                         <h1>Coline ROY-CAMILLE</h1>
-                         <h4>Graphiste - Webdesigner</h4>
+                     <div class="col-md-6">
+                         <div class="titre">
+                             <h1>Coline ROY-CAMILLE</h1>
+                             <h4>Graphiste - Webdesigner</h4>
+                         </div>
+                         
                      </div>
                 </div>
              </div>
@@ -41,8 +44,7 @@
                     <div class="col-md-4">
                          <section class="texte">
                             <h4>Ambitions <span class="glyphicon glyphicon-leaf"></span></h4> 
-                            <p>Mieux comprendre et maîtriser un environnement que j'utilise chaque jour : 
-                            <br/>internet.</p>
+                            <p>Mieux comprendre et maîtriser un environnement que j'utilise chaque jour : internet.</p>
                             <p>Réorienter mon activité vers le web.
                             <br/>Pouvoir réaliser ou conseiller mes clients sur la réalisation de leur site internet.</p>
                         </section>
